Removed form-header div in form-container

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
             <img src="./images/leafy.png" alt="Picture of jungle background">
         </div>
         <div class="form-container">
-            <div class="form-header">
-
-            </div>
+            
             <div class="form-body">
 
             </div>
             <div class="form-footer">
-                
+                <button type="submit" form="new-account" value="CreateAccount">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
     </div>
